--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">ParwinderContactTracing</string>
     <string name="add">Add</string>
+    <string name="name">Name</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="email">E-Mail</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="enter_name">Enter name</string>
+    <string name="enter_mobile_no">Enter mobile number</string>
+    <string name="enter_email_id">Enter email id</string>
+    <string name="enter_valid_mobile_no">Enter valid mobile number</string>
+    <string name="enter_valid_email_id">Enter valid email id</string>
 </resources>
