added gson library to parse array list createad Singleton class for shared preferences code to save data in shared preferences code to show data in recyclerview adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="enter_email_id">Enter email id</string>
     <string name="enter_valid_mobile_no">Enter valid mobile number</string>
     <string name="enter_valid_email_id">Enter valid email id</string>
+    <string name="no_contacts_to_show">No contacts to show</string>
+    <string name="menu">Menu</string>
 </resources>
